# cargo-rapk

./: Cargo.toml
.github/workflows/: android_test.sh  rust.yml
cargo-rapk/: Cargo.toml  README.md
cargo-rapk/src/: apk.rs  contrib.rs  error.rs  java.rs  lib.rs  main.rs  manifest.rs
ndk-examples/examples/: hello_world.rs  jni_audio.rs
rndk/: Cargo.toml
rndk/src/: apk.rs  cargo.rs  dylibs.rs  error.rs  manifest.rs  ndk.rs  zipnorm.rs
