[package]
name = "cargo-rapk"
version.workspace = true
authors = ["The Rust Windowing contributors"]          #OAuthors
edition.workspace = true
description = "Helps cargo build APKs"
license = "MIT OR Apache-2.0"
keywords = ["android", "ndk", "apk"]
documentation = "https://docs.rs/cargo-rapk"
homepage = "https://github.com/mlm-games/cargo-rapk"
repository = "https://github.com/mlm-games/cargo-rapk"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.99"
cargo-subcommand = "0.12"
clap = { version = "4.5.49", features = ["derive", "env"] }
dunce = "1"
env_logger = "0.11.8"
log = "0.4"
rndk.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1.2+spec-1.1.0"
